[package]
name = "laszy_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "laszy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
laszy = { path = "../laszy_rs" }
numpy = "0.18.0"
ndarray = "0.15.6"
las = "0.8.0"
