[package]
name = "laszy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
las = {version = "0.8", features = ["laz"]}
derive_more = "0.99.17"
indicatif = "0.17.2"
rand = "0.8.5"
ndarray = "0.15.6"
kdtree = "0.7.0"